[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Fonts/PixelOperatorMono8.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/Submarine/wait_bar.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 1 )

[node name="WaitBar" type="CenterContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = -760.0
margin_bottom = -440.0
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 25.0
margin_top = 29.0
margin_right = 175.0
margin_bottom = 71.0

[node name="WaitText" type="Label" parent="VBoxContainer"]
margin_right = 150.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 1 )
text = "Something"
align = 1

[node name="WaitProgress" type="ProgressBar" parent="VBoxContainer"]
margin_top = 17.0
margin_right = 150.0
margin_bottom = 42.0
rect_min_size = Vector2( 150, 25 )
percent_visible = false
